# Darkly

./: .gitignore  CMakeLists.txt  DarklyConfig.cmake.in  README.md  flake.nix  install.sh  uninstall.sh
.github/: FUNDING.yml
.github/assets/docker/kde-neon/: Dockerfile
.github/assets/docker/kubuntu/: Dockerfile
.github/assets/pkgbuild/: PKGBUILD
.github/assets/specs/: darkly.spec  lightly.spec
.github/assets/specs/fedora/: lightly-qt6.spec
.github/assets/specs/opensuse-tw/: lightly-qt6.spec
.github/workflows/: archlinux-ci.yml  archlinux.yml  darkly-ci.yml  fedora-ci.yml  fedora.yml  kubuntu-ci.yml  kubuntu.yml  lightly-ci.yml  neon-ci.yml  neon.yml  opensuse-tw-ci.yml  opensuse-tw.yml
colors/: CMakeLists.txt  Lightly.colors
kdecoration/: CMakeLists.txt  Messages.sh  config-darkly.h.cmake  darkly.h  darkly.json  darklybutton.cpp  darklybutton.h  darklydecoration.cpp  darklydecoration.h  darklyexceptionlist.cpp  darklyexceptionlist.h  darklysettings.kcfgc  darklysettingsdata.kcfg  darklysettingsprovider.cpp  darklysettingsprovider.h  darklysizegrip.cpp  darklysizegrip.h  lightly.json  lightlybutton.cpp  lightlydecoration.cpp  lightlydecoration.h  lightlysettingsprovider.cpp  lightlysizegrip.cpp
kdecoration/config/: CMakeLists.txt  darklyconfigwidget.cpp  darklyconfigwidget.h  darklydecorationconfig.desktop  darklydetectwidget.cpp  darklydetectwidget.h  darklyexceptiondialog.cpp  darklyexceptiondialog.h  darklyexceptionlistwidget.cpp  darklyexceptionlistwidget.h  darklyexceptionmodel.cpp  darklyexceptionmodel.h  darklyitemmodel.cpp  darklyitemmodel.h  darklylistmodel.h  kcm_darklydecoration.cpp  kcm_darklydecoration.json  kcm_lightlydecoration.cpp  kcm_lightlydecoration.json  lightlyconfigwidget.cpp  lightlyconfigwidget.h  lightlydecorationconfig.desktop  lightlydetectwidget.h  lightlyexceptiondialog.h  lightlyexceptionlistwidget.cpp  lightlyexceptionlistwidget.h
kdecoration/config/ui/: darklyconfigurationui.ui  darklydetectwidget.ui  darklyexceptiondialog.ui  darklyexceptionlistwidget.ui
kstyle/: CMakeLists.txt  config-darkly.h.cmake  darkly.h  darkly.json  darkly.kcfg  darkly.themerc  darklyaddeventfilter.cpp  darklyaddeventfilter.h  darklyblurhelper.cpp  darklyblurhelper.h  darklyframeshadow.cpp  darklyframeshadow.h  darklyhelper.cpp  darklyhelper.h  darklymdiwindowshadow.cpp  darklymdiwindowshadow.h  darklymnemonics.cpp  darklymnemonics.h  darklypropertynames.cpp  darklypropertynames.h  darklyshadowhelper.cpp  darklyshadowhelper.h  darklysplitterproxy.cpp  darklysplitterproxy.h  darklystyle.cpp  darklystyle.h  darklystyleconfigdata.kcfgc  darklystyleplugin.cpp  darklystyleplugin.h  darklytileset.cpp  darklytileset.h  darklytoolsareamanager.cpp  darklytoolsareamanager.h  darklywindowmanager.cpp  darklywindowmanager.h  lightly.h  lightly.kcfg  lightly.themerc  lightlyblurhelper.cpp  lightlyframeshadow.cpp  (+12 more)
kstyle/animations/: darklyanimation.cpp  darklyanimation.h  darklyanimationdata.cpp  darklyanimationdata.h  darklyanimations.cpp  darklyanimations.h  darklybaseengine.cpp  darklybaseengine.h  darklybusyindicatordata.cpp  darklybusyindicatordata.h  darklybusyindicatorengine.cpp  darklybusyindicatorengine.h  darklydatamap.h  darklydialdata.cpp  darklydialdata.h  darklydialengine.cpp  darklydialengine.h  darklyenabledata.cpp  darklyenabledata.h  darklygenericdata.cpp  darklygenericdata.h  darklyheaderviewdata.cpp  darklyheaderviewdata.h  darklyheaderviewengine.cpp  darklyheaderviewengine.h  darklyscrollbardata.cpp  darklyscrollbardata.h  darklyscrollbarengine.cpp  darklyscrollbarengine.h  darklyspinboxdata.cpp  darklyspinboxdata.h  darklyspinboxengine.cpp  darklyspinboxengine.h  darklystackedwidgetdata.cpp  darklystackedwidgetdata.h  darklystackedwidgetengine.cpp  darklystackedwidgetengine.h  darklytabbardata.cpp  darklytabbardata.h  darklytabbarengine.cpp  (+14 more)
kstyle/config/: CMakeLists.txt  Messages.sh  darklystyleconfig.cpp  darklystyleconfig.h  darklystyleconfig.json  darklystyleconfigmodule.cpp  darklystyleconfigmodule.h  lightlystyleconfig.cpp  lightlystyleconfig.json  lightlystyleconfigmodule.cpp  lightlystyleconfigmodule.h  main.cpp
kstyle/config/ui/: darklystyleconfig.ui  lightlystyleconfig.ui
kstyle/debug/: darklywidgetexplorer.cpp  darklywidgetexplorer.h  lightlywidgetexplorer.cpp
libdarklycommon/: CMakeLists.txt  darklyboxshadowrenderer.cpp  darklyboxshadowrenderer.h
liblightlycommon/: CMakeLists.txt
nix/: package.nix
